# llmops-rag-pipeline

./: Dockerfile  GitHubA_workflow.yaml  README.md  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: rag.py
app/services/: experiment_service.py  prompt_service.py  rag_service.py
data/: .gitignore
data/vectordb/: chroma.sqlite3
scripts/: finetune_model.py  process_data.py
tests/: conftest.py  test_api_routes.py  test_experiment_service.py  test_finetune.py  test_integration.py  test_process_data.py  test_prompt_service.py  test_rag_service.py
