[tool.poetry]
name = "llmops-rag-pipeline"
version = "0.1.0"
description = "LLMOps Pipeline for RAG Applications"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
transformers = "^4.35.0"
torch = "^2.0.0"
dvc = "^3.30.0"
comet-ml = "^3.35.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.18"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
